--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -24,7 +24,7 @@ migrate_working_dir/
 #.vscode/
 
 # Flutter/Dart/Pub related
-**/doc/api/
+**/doc/api/ 
 **/ios/Flutter/.last_build_id
 .dart_tool/
 .flutter-plugins
@@ -32,6 +32,7 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
+/linux/
 
 # Symbolication related
 app.*.symbols
