--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   media_kit: ^1.1.7
   media_kit_video: ^1.1.7
   media_kit_libs_windows_video: ^1.0.4
+  csv: ^5.0.2
+  path: ^1.8.3
   
 dev_dependencies:
   flutter_test:
