--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -46,8 +46,10 @@ dependencies:
   csv: ^5.0.2
   path: ^1.8.3
   google_fonts: ^6.2.1
-  hid4flutter:
-  
+
+  another_flushbar:
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
