--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -36,13 +36,13 @@ dependencies:
   cupertino_icons: ^1.0.8
   model_viewer_plus: ^1.9.3
   shared_preferences: ^2.2.2
-  video_player: ^2.10.0
-  chewie: ^1.9.0
+  video_player: ^2.7.0
+  chewie: ^1.7.0
   http: ^1.4.0
   webview_flutter: ^4.7.0
-  media_kit: ^1.1.7
-  media_kit_video: ^1.1.7
-  media_kit_libs_windows_video: ^1.0.4
+  media_kit: ^1.2.0 # Check pub.dev for the absolute latest if different
+  media_kit_video: ^1.3.0  # Check pub.dev for the absolute latest if different
+  media_kit_libs_windows_video: ^1.0.0 # Windows support for media_kit
   csv: ^5.0.2
   path: ^1.8.3
   google_fonts: ^6.2.1
